<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    android:orientation="vertical"
    tools:context="com.example.carads.ui.filter.FilterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/toolbar_elevation"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
      />

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_up_margin"
        android:text="@string/sort" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/rbMarka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_vertical_margin"
            android:text="@string/sort_marka" />

        <RadioButton
            android:id="@+id/rbDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_vertical_margin"
            android:text="@string/sort_date" />

        <RadioButton
            android:id="@+id/rbCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_vertical_margin"
            android:text="@string/sort_cost" />

        <RadioButton
            android:id="@+id/rbColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_vertical_margin"
            android:text="@string/sort_color" />

        <RadioButton
            android:id="@+id/rbValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_vertical_margin"
            android:text="@string/sort_value" />

        <RadioButton
            android:id="@+id/rvPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_vertical_margin"
            android:text="@string/sort_power" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/component_vertical_margin"
        android:text="@string/show_ads" />
</LinearLayout>
