<android.support.v4.widget.NestedScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/screen_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        />

    <Button
        android:id="@+id/btnOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_alignBottom="@+id/view1"
        android:layout_toEndOf="@+id/view1"
        android:textSize="12sp"
        android:text="@string/orange" />

    <View
        android:id="@+id/view2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/view1"
        android:layout_below="@+id/view1"
        android:layout_marginTop="8dp" />


    <Button
        android:id="@+id/btnBrown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view2"


        android:layout_alignBottom="@+id/view2"

        android:text="@string/brown" />


    <View
        android:id="@+id/view3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/view1"

        android:layout_below="@+id/view2"
        android:layout_marginTop="8dp" />


    <Button
        android:id="@+id/btnMet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view3"

        android:layout_alignBottom="@+id/view3"

        android:text="@string/metal" />
    <View
        android:id="@+id/view4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/view3"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnBlue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view4"
        android:layout_alignBottom="@+id/view4"
        android:text="@string/blue1" />

    <View
        android:id="@+id/view6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/view4"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view6"
        android:layout_alignBottom="@+id/view6"
        android:text="@string/black" />
    <View
        android:id="@+id/view7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/view6"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnAur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view7"
        android:layout_alignBottom="@+id/view7"
        android:text="@string/aurum" />
    <View
        android:id="@+id/view8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/view7"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view8"
        android:layout_alignBottom="@+id/view8"
        android:text="@string/white" />
    <View
        android:id="@+id/view9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/view8"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnYel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view9"
        android:layout_alignBottom="@+id/view9"
        android:text="@string/yellow" />
    <View
        android:id="@+id/view10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/view9"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view10"
        android:layout_alignBottom="@+id/view10"
        android:text="@string/red" />
    <View
        android:id="@+id/view11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/view10"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/view11"
        android:layout_alignBottom="@+id/view11"
        android:text="@string/grey" />

</RelativeLayout>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>