<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorScreen"
    tools:context="com.example.carads.ui.myads.MyAdsActivity">

<android.support.v7.widget.Toolbar

    android:id="@+id/tbSetting"
    android:background="@color/colorPrimary"
    app:titleTextColor="@color/colorWhite"
    app:subtitleTextColor="@color/colorWhite"
    android:layout_width="match_parent"
 android:layout_height="?attr/actionBarSize">


</android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="@dimen/text_view_padding"
        android:textSize="16sp"
        android:text="@string/help"
        style="@style/MyTextStyle"
        android:background="?selectableItemBackground" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/component_up_margin"
        android:background="@drawable/divider" />

    <TextView
        android:id="@+id/tvAppInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="@dimen/text_view_padding"
        android:textSize="16sp"
        android:text="@string/app_info"
        style="@style/MyTextStyle"
        android:background="?selectableItemBackground" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/component_up_margin"
        android:background="@drawable/divider" />

    <TextView
        android:id="@+id/tvLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="@dimen/text_view_padding"
        android:textSize="16sp"
        android:text="@string/license"
        style="@style/MyTextStyle"
        android:background="?selectableItemBackground" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/component_up_margin"
        android:background="@drawable/divider" />

    <TextView
        android:id="@+id/tvConfid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_view_padding"
        android:textSize="16sp"
        android:text="@string/config"
        style="@style/MyTextStyle"
        android:background="?selectableItemBackground" />


</LinearLayout>
