<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin_help_frag"
    android:background="@color/colorScreen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_theme"
        android:layout_weight="0"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:hintTextAppearance="@style/MyHintText"
        >
        <EditText
            android:id="@+id/et_my_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ask_a_question_theme"
            android:theme="@style/MyEditText"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_message"
        android:layout_weight="1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:hintTextAppearance="@style/MyHintText"
        >
        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/ask_a_question_or_report_an_error"
            android:theme="@style/MyEditText"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnAskQuest"
        style="@style/MyButton"
        android:layout_weight="0"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_detail_write_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
